--- a/templates/about.html
+++ b/templates/about.html
@@ -15,7 +15,7 @@
 <section class="about-section">
     <div class="container">
         <div class="about-container">
-            <h1 class="about-title">✨ About AI Reel Generator</h1>
+            <h1 class="about-title"> About AI Reel Generator</h1>
 
             <div class="about-content">
                 <p>
