--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -26,7 +26,7 @@
 </div>
 
 <div class="container gallery-container">
-    <h1 class="gallery-title">🎬 Reel Gallery</h1>
+    <h1 class="gallery-title">Reel Gallery</h1>
 
     {% if reels %}
     <div class="gallery-stats">
