--- a/templates/create.html
+++ b/templates/create.html
@@ -145,7 +145,7 @@
                                 <option value="blur_edges">Blur Edges / Focus Center</option>
                             </optgroup>
                         </select>
-                        <div class="file-size-info">Apply a professional visual filter to your reel</div>
+                        <div class="file-size-info">Apply a professional visual filter to your reels</div>
                     </div>
                 </div>
 
